--- a/css/main.css
+++ b/css/main.css
@@ -338,97 +338,36 @@ template {
   display: none;
 }
 
-/*reset*/
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
+.minesweeper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0 40px 0;
 }
-
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
+.minesweeper__title {
+  font-size: 24px;
+  text-align: center;
 }
-
-:focus,
-:active {
-  outline: none;
+.minesweeper__start-game-btn {
+  margin: 0 0 10px 0;
 }
-
-a:focus,
-a:active {
-  outline: none;
+.minesweeper__-game-field {
+  display: flex;
+  max-width: 400px;
+  flex-wrap: wrap;
 }
-
-nav,
-footer,
-header,
-aside {
-  display: block;
+.minesweeper__ingame-btn_easy {
+  height: 40px;
+  width: 40px;
+  font-size: 24px;
 }
 
 html,
 body {
   height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 1;
   font-size: 14px;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-input,
-button,
-textarea {
-  font-family: inherit;
-}
-
-input::-ms-clear {
-  display: none;
-}
-
-button {
-  cursor: pointer;
-}
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-a,
-a:visited {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-ul li {
-  list-style: none;
-}
-
-img {
-  vertical-align: top;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: inherit;
-  font-weight: inherit;
-}
-
-html,
-body {
-  height: 100%;
+  font-family: Verdana, Tahoma, sans-serif;
 }
 
 .container {
