--- a/css/main.css
+++ b/css/main.css
@@ -349,18 +349,40 @@ template {
   font-size: 24px;
   text-align: center;
 }
+.minesweeper__controls {
+  display: flex;
+  width: 100%;
+  max-width: 500px;
+  justify-content: start;
+  margin: 0 0 60px 0;
+}
+.minesweeper__subtitle {
+  margin: 0 0 10px 0;
+  font-size: 14px;
+  font-weight: 400;
+}
 .minesweeper__start-game-btn {
   margin: 0 0 10px 0;
 }
-.minesweeper__-game-field {
+.minesweeper__game-field {
   display: flex;
-  max-width: 400px;
+  width: 500px;
   flex-wrap: wrap;
 }
 .minesweeper__ingame-btn_easy {
-  height: 40px;
-  width: 40px;
+  height: 50px;
+  width: 50px;
   font-size: 24px;
+}
+.minesweeper__ingame-btn_normal {
+  height: 33.3px;
+  width: 33.3px;
+  font-size: 18px;
+}
+.minesweeper__ingame-btn_hard {
+  height: 20px;
+  width: 20px;
+  font-size: 12px;
 }
 
 html,
