--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -15,7 +15,7 @@
 		display: flex;
 		width: 100%;
 		max-width: 500px;
-		justify-content: start;
+		justify-content: space-between;
 		margin: 0 0 60px 0;
 	}
 
@@ -24,8 +24,6 @@
 		font-size: 14px;
 		font-weight: 400;
 	}
-
-	&__select {}
 
 	&__start-game-btn {
 		margin: 0 0 10px 0;
@@ -56,5 +54,38 @@
 			width: 20px;
 			font-size: 12px;
 		}
+	}
+
+	&__pop-up-wrapper {
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background-color: rgba(9, 195, 219, 0.1);
+	}
+
+	&__pop-up {
+		position: relative;
+		top: -160px;
+		width: 500px;
+		height: 500px;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
+
+		background-color: rgba(9, 195, 219, 0.4);
+	}
+
+	&__message {
+		max-width: 500px;
+		font-size: 32px;
+
+		text-align: center;
 	}
 }
