--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,7 @@ template {
   display: flex;
   width: 100%;
   max-width: 500px;
-  justify-content: start;
+  justify-content: space-between;
   margin: 0 0 60px 0;
 }
 .minesweeper__subtitle {
@@ -383,6 +383,33 @@ template {
   height: 20px;
   width: 20px;
   font-size: 12px;
+}
+.minesweeper__pop-up-wrapper {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(9, 195, 219, 0.1);
+}
+.minesweeper__pop-up {
+  position: relative;
+  top: -160px;
+  width: 500px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: rgba(9, 195, 219, 0.4);
+}
+.minesweeper__message {
+  max-width: 500px;
+  font-size: 32px;
+  text-align: center;
 }
 
 html,
