--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -25,6 +25,14 @@
 		font-weight: 400;
 	}
 
+	&__prim-btn {
+		background-color: in;
+		color: green;
+		border-color: green;
+		border-radius: 5px;
+		font-size: 18px;
+	}
+
 	&__start-game-btn {
 		margin: 0 0 10px 0;
 	}
@@ -63,6 +71,22 @@
 			background-repeat: no-repeat;
 			background-size: contain;
 		}
+
+		&._1 {
+			color: blue;
+		}
+
+		&._2 {
+			color: green;
+		}
+
+		&._3 {
+			color: red;
+		}
+
+		&._4 {
+			color: darkblue;
+		}
 	}
 
 	&__pop-up-wrapper {
@@ -75,26 +99,27 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		background-color: rgba(9, 195, 219, 0.1);
+		background-color: rgba(110, 94, 110, 0.1);
 	}
 
 	&__pop-up {
-		position: relative;
-		top: -160px;
-		width: 500px;
-		height: 500px;
+		width: 70%;
+		height: 70%;
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-start;
 		align-items: center;
-
-		background-color: rgba(9, 195, 219, 0.4);
+		border: 3px solid green;
+		border-radius: 10px;
+		background-color: rgba(121, 94, 122, 0.4);
 	}
 
 	&__message {
 		max-width: 500px;
-		font-size: 32px;
+		margin: 50px;
 
+		color: rgb(255, 255, 255);
+		font-size: 32px;
 		text-align: center;
 	}
 
