fix: fix path for image

--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -67,7 +67,7 @@
 		}
 
 		&_flaged {
-			background-image: url(/assets/img/flag.png);
+			background-image: url(../assets/img/flag.png);
 			background-repeat: no-repeat;
 			background-size: contain;
 		}
