--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -26,7 +26,6 @@
 	}
 
 	&__prim-btn {
-		background-color: in;
 		color: green;
 		border-color: green;
 		border-radius: 5px;
@@ -41,6 +40,7 @@
 		display: flex;
 		width: 500px;
 		flex-wrap: wrap;
+		margin: 0 0 10px 0;
 	}
 
 	&__ingame-btn {
@@ -129,4 +129,82 @@
 		width: 150%;
 		max-width: 50px;
 	}
+
+	&__get-history-btn {
+		color: orange;
+		border-color: orange;
+		border-radius: 5px;
+		font-size: 18px;
+	}
+}
+
+.history-popup {
+	position: relative;
+	top: -150px;
+	display: flex;
+	flex-direction: column;
+	min-width: 450px;
+	width: 50%;
+	padding: 10px;
+	border: 2px solid #000;
+	border-radius: 10px;
+
+	&__wrapper {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background-color: rgba(255, 255, 255, 0.9);
+	}
+
+	&__title {
+		margin: 0 0 10px 0;
+		text-align: center;
+	}
+
+	&__body {
+		display: flex;
+		flex-direction: column;
+	}
+
+	&__close-btn {
+		position: absolute;
+		top: -50px;
+		right: -50px;
+
+		height: 50px;
+		width: 50px;
+
+		border: 2px solid #000;
+		border-radius: 50%;
+	}
+
+	&__row {
+		display: flex;
+		justify-content: space-around;
+	}
+
+	&__num {
+		width: 25%;
+		text-align: center;
+	}
+
+	&__res {
+		width: 25%;
+		text-align: center;
+	}
+
+	&__time {
+		width: 25%;
+		text-align: center;
+	}
+
+	&__clicks {
+		width: 25%;
+		text-align: center;
+	}
+
 }
