--- a/css/main.css
+++ b/css/main.css
@@ -362,7 +362,6 @@ template {
   font-weight: 400;
 }
 .minesweeper__prim-btn {
-  background-color: in;
   color: green;
   border-color: green;
   border-radius: 5px;
@@ -375,6 +374,7 @@ template {
   display: flex;
   width: 500px;
   flex-wrap: wrap;
+  margin: 0 0 10px 0;
 }
 .minesweeper__ingame-btn {
   display: flex;
@@ -448,6 +448,70 @@ template {
   width: 150%;
   max-width: 50px;
 }
+.minesweeper__get-history-btn {
+  color: orange;
+  border-color: orange;
+  border-radius: 5px;
+  font-size: 18px;
+}
+
+.history-popup {
+  position: relative;
+  top: -150px;
+  display: flex;
+  flex-direction: column;
+  min-width: 450px;
+  width: 50%;
+  padding: 10px;
+  border: 2px solid #000;
+  border-radius: 10px;
+}
+.history-popup__wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.9);
+}
+.history-popup__title {
+  margin: 0 0 10px 0;
+  text-align: center;
+}
+.history-popup__body {
+  display: flex;
+  flex-direction: column;
+}
+.history-popup__close-btn {
+  position: absolute;
+  top: -50px;
+  right: -50px;
+  height: 50px;
+  width: 50px;
+  border: 2px solid #000;
+  border-radius: 50%;
+}
+.history-popup__row {
+  display: flex;
+  justify-content: space-around;
+}
+.history-popup__num {
+  width: 25%;
+  text-align: center;
+}
+.history-popup__res {
+  width: 25%;
+  text-align: center;
+}
+.history-popup__time {
+  width: 25%;
+  text-align: center;
+}
+.history-popup__clicks {
+  width: 25%;
+  text-align: center;
+}
 
 html,
 body {
@@ -470,4 +534,8 @@ body {
 
 .main {
   flex: 1 1 auto;
+}
+
+._scroll-lock {
+  overflow: hidden;
 }/*# sourceMappingURL=main.css.map */
