--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -36,6 +36,18 @@
 		margin: 0 0 10px 0;
 	}
 
+	&__effects {
+		display: flex;
+	}
+
+	&__sound-effects {
+		display: flex;
+	}
+
+	&__sound-chebox {
+		margin: -7px 0 0 10px;
+	}
+
 	&__game-field {
 		display: flex;
 		width: 500px;
@@ -93,6 +105,7 @@
 		position: absolute;
 		left: 0;
 		top: 0;
+		min-width: 500px;
 		width: 100%;
 		height: 100%;
 
