--- a/css/main.css
+++ b/css/main.css
@@ -370,6 +370,15 @@ template {
 .minesweeper__start-game-btn {
   margin: 0 0 10px 0;
 }
+.minesweeper__effects {
+  display: flex;
+}
+.minesweeper__sound-effects {
+  display: flex;
+}
+.minesweeper__sound-chebox {
+  margin: -7px 0 0 10px;
+}
 .minesweeper__game-field {
   display: flex;
   width: 500px;
@@ -417,6 +426,7 @@ template {
   position: absolute;
   left: 0;
   top: 0;
+  min-width: 500px;
   width: 100%;
   height: 100%;
   display: flex;
