--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -32,6 +32,11 @@
 		font-size: 18px;
 	}
 
+	&__number-of-mine-input {
+		width: 70px;
+		margin: 0 0 10px 0;
+	}
+
 	&__start-game-btn {
 		margin: 0 0 10px 0;
 	}
