--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,10 @@ template {
   border-radius: 5px;
   font-size: 18px;
 }
+.minesweeper__number-of-mine-input {
+  width: 70px;
+  margin: 0 0 10px 0;
+}
 .minesweeper__start-game-btn {
   margin: 0 0 10px 0;
 }
