fix: fix background for history popup in dark theme

--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -239,4 +239,9 @@ body.dark {
 	.minesweeper__ingame-btn {
 		background-color: rgb(96, 74, 69)
 	}
+
+	.history-popup__wrapper {
+		background-color: rgba(96, 74, 69, 0.9)
+	}
+
 }
