--- a/css/main.css
+++ b/css/main.css
@@ -539,6 +539,9 @@ body.dark .minesweeper__select {
 body.dark .minesweeper__ingame-btn {
   background-color: rgb(96, 74, 69);
 }
+body.dark .history-popup__wrapper {
+  background-color: rgba(96, 74, 69, 0.9);
+}
 
 html,
 body {
