--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -124,6 +124,7 @@
 	&__pop-up {
 		width: 70%;
 		height: 70%;
+		min-width: 500px;
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-start;
@@ -244,4 +245,14 @@ body.dark {
 		background-color: rgba(96, 74, 69, 0.9)
 	}
 
+}
+
+@media (max-height: 724px) {
+	.minesweeper__pop-up-wrapper {
+		height: 150%;
+	}
+
+	.history-popup {
+		top: 0;
+	}
 }
